# esp-video-components

./: .codespellrc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  Kconfig  README.md  conftest.py  idf_component.yml  linker.lf  translate_config.yml
drivers/cameras/gc0308/: CMakeLists.txt  Kconfig  gc0308.c  idf_component.yml
drivers/cameras/ov2640/: CMakeLists.txt  Kconfig  idf_component.yml  ov2640.c
drivers/cameras/ov5640/: CMakeLists.txt  Kconfig  idf_component.yml  ov5640.c
drivers/cameras/ov5645/: CMakeLists.txt  Kconfig  idf_component.yml  ov5645.c
drivers/cameras/ov5647/: CMakeLists.txt  Kconfig  idf_component.yml  ov5647.c
drivers/cameras/sc2336/: CMakeLists.txt  Kconfig  idf_component.yml  sc2336.c
drivers/cameras/sim/: CMakeLists.txt  Kconfig  idf_component.yml  sim.c
esp_cam_sensor/: CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  SUPPORT_POLICY.md  SUPPORT_POLICY_CN.md  idf_component.yml  linker.lf  project_include.cmake  sdkconfig.rename
esp_cam_sensor/include/: esp_cam_ctlr_dvp_ext.h  esp_cam_ctlr_spi.h  esp_cam_motor.h  esp_cam_motor_detect.h  esp_cam_motor_types.h  esp_cam_sensor.h  esp_cam_sensor_detect.h  esp_cam_sensor_types.h  esp_cam_sensor_xclk.h
esp_cam_sensor/motors/dw9714/: Kconfig.dw9714  dw9714.c
esp_cam_sensor/sensors/bf20a6/: Kconfig.bf20a6  bf20a6.c
esp_cam_sensor/sensors/bf3045/: Kconfig.bf3045  bf3045.c
esp_cam_sensor/sensors/bf3901/: Kconfig.bf3901  bf3901.c
esp_cam_sensor/sensors/bf3925/: Kconfig.bf3925  bf3925.c
esp_cam_sensor/sensors/bf3a03/: Kconfig.bf3a03  bf3a03.c
esp_cam_sensor/sensors/gc0308/: Kconfig.gc0308  gc0308.c
esp_cam_sensor/sensors/gc2145/: Kconfig.gc2145  gc2145.c
esp_cam_sensor/sensors/lt6911/: Kconfig.lt6911  lt6911.c
esp_cam_sensor/sensors/mira220/: Kconfig.mira220  mira220.c
esp_cam_sensor/sensors/mt9d111/: Kconfig.mt9d111  mt9d111.c
esp_cam_sensor/sensors/os02n10/: Kconfig.os02n10  os02n10.c
esp_cam_sensor/sensors/os04c10/: Kconfig.os04c10  os04c10.c
esp_cam_sensor/sensors/ov02c10/: Kconfig.ov02c10  ov02c10.c
esp_cam_sensor/sensors/ov2640/: Kconfig.ov2640  ov2640.c
esp_cam_sensor/sensors/ov2710/: Kconfig.ov2710  ov2710.c
esp_cam_sensor/sensors/ov3640/: Kconfig.ov3640  ov3640.c
esp_cam_sensor/sensors/ov3660/: Kconfig.ov3660  ov3660.c
esp_cam_sensor/sensors/ov5640/: Kconfig.ov5640  ov5640.c
esp_cam_sensor/sensors/ov5645/: Kconfig.ov5645  ov5645.c
esp_cam_sensor/sensors/ov5647/: Kconfig.ov5647  ov5647.c
esp_cam_sensor/sensors/ov9281/: Kconfig.ov9281  ov9281.c
esp_cam_sensor/sensors/pivariety/: Kconfig.pivariety  pivariety.c
esp_cam_sensor/sensors/sc030iot/: Kconfig.sc030iot  sc030iot.c
esp_cam_sensor/sensors/sc035hgs/: Kconfig.sc035hgs  sc035hgs.c
esp_cam_sensor/sensors/sc101iot/: Kconfig.sc101iot  sc101iot.c
esp_cam_sensor/sensors/sc121at/: Kconfig.sc121at  sc121at.c
esp_cam_sensor/sensors/sc1346/: Kconfig.sc1346  sc1346.c
esp_cam_sensor/sensors/sc202cs/: Kconfig.sc202cs  sc202cs.c
esp_cam_sensor/sensors/sc2331/: Kconfig.sc2331  sc2331.c
esp_cam_sensor/sensors/sc2336/: Kconfig.sc2336  sc2336.c
esp_cam_sensor/sensors/sp0a39/: Kconfig.sp0a39  sp0a39.c
esp_cam_sensor/sensors/sti2250/: Kconfig.sti2250  sti2250.c
esp_cam_sensor/src/: esp_cam_motor.c  esp_cam_motor_detect.c  esp_cam_sensor.c  esp_cam_sensor_detect.c  esp_cam_sensor_xclk.c
esp_cam_sensor/src/driver_cam/: esp_cam_ctlr_spi_cam.c  esp_cam_ctlr_spi_cam.h
esp_cam_sensor/src/driver_dvp/: esp_cam_ctlr_dvp_cam.c
esp_cam_sensor/src/driver_spi/: VERSION  esp_cam_spi_slave.h  spi_slave.c
esp_cam_sensor/test_apps/: .build-test-rules.yml
esp_cam_sensor/test_apps/detect/: README.md  sdkconfig.ci.all_cameras  sdkconfig.ci.esp32p4.static_link
esp_cam_sensor/test_apps/xclk_generator/: README.md  sdkconfig.defaults
esp_ipa/: CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  idf_component.yml
esp_ipa/include/: esp_ipa.h  esp_ipa_cmd.h  esp_ipa_detect.h  esp_ipa_types.h  esp_ipa_version.h
esp_ipa/lib/esp32p4/: version
esp_ipa/src/: esp_ipa_detect.c  version.c
esp_ipa/test_apps/: .build-test-rules.yml
esp_ipa/test_apps/dummy/: CMakeLists.txt  sdkconfig.ci.esp32p4.static_link  sdkconfig.defaults  test_apps_dummy.json  test_apps_dummy_2.json
esp_ipa/test_apps/registry_consumer/: .build-test-rules.yml  CMakeLists.txt  README.md  sdkconfig.defaults
esp_ipa/tools/config/: esp_ipa_config.py  esp_ipa_utils.py
esp_video/: CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  idf_component.yml  sdkconfig.rename
esp_video/examples/: README.md
esp_video/examples/capture_stream/: .build-test-rules.yml  README.md  sdkconfig.ci.disable_swap_byte  sdkconfig.ci.disable_swap_short  sdkconfig.ci.driver_buf  sdkconfig.ci.enable_motor  sdkconfig.ci.enable_motor_disable_controller  sdkconfig.ci.esp32p4.customized_2_spi  sdkconfig.ci.esp32p4.customized_csi  sdkconfig.ci.esp32p4.customized_dvp  sdkconfig.ci.esp32p4.customized_parlio  sdkconfig.ci.esp32p4.customized_spi  sdkconfig.ci.esp32p4.disable_isp_video_device  sdkconfig.ci.esp32p4.disable_swap_byte  sdkconfig.ci.esp32p4.disable_swap_short  sdkconfig.ci.esp32p4.driver_buf_and_mirror  sdkconfig.ci.esp32p4.eco4  sdkconfig.ci.esp32p4.eco5  sdkconfig.ci.esp32p4.enable_motor  sdkconfig.ci.esp32p4.enable_motor_disable_controller  sdkconfig.ci.esp32p4.esp32_p4_eye_csi  sdkconfig.ci.esp32p4.esp32_p4_function_ev_board_v1_5_csi  (+18 more)
esp_video/include/: esp_video_caps.h  esp_video_device.h  esp_video_init.h  esp_video_ioctl.h  esp_video_isp_ioctl.h  esp_video_isp_pipeline.h
esp_video/private_include/: esp_video.h  esp_video_buffer.h  esp_video_cam.h  esp_video_cam_device.h  esp_video_codec_device.h  esp_video_csi_format.h  esp_video_device.h  esp_video_device_common.h  esp_video_device_internal.h  esp_video_device_usb_uvc.h  esp_video_internal.h  esp_video_ioctl.h  esp_video_pipeline_isp.h  esp_video_sensor.h  esp_video_swap_byte.h  esp_video_swap_short.h
esp_video/src/: esp_video.c  esp_video_buffer.c  esp_video_cam.c  esp_video_init.c  esp_video_ioctl.c  esp_video_isp_pipeline.c  esp_video_sensor.c  esp_video_vfs.c
(+867 files in other folders)
